--- a/Decontamination_pipeline.Rmd
+++ b/Decontamination_pipeline.Rmd
@@ -35,7 +35,7 @@ library(decontam) # Decontamination package
 setwd(dirname(rstudioapi::getActiveDocumentContext()$path)) # Sets the directory to the place the script is saved.
 ```
 
-Now we can import the data. They should be in the same directory as the script.
+Now we can import the data. They should be in the same directory as the script. The files can be found on the Github.
 
 ```{r inputs}
 OTUtable <- read.csv("Otutab.sorted.tsv", row.names=1, sep = "\t")
@@ -121,7 +121,7 @@ rm(Milos_rel_nonBA) # Some cleanup
 So obviously we have mainly Cyanobacteria/Chloroplasts here. Not completely surprising considering that we are in a shallow system where photosynthesis is likely to happen. Anyway, let's move on!
 
 ## Decontam package
-Here we use only the frequency approach of the [decontam](https://www.bioconductor.org/packages/devel/bioc/vignettes/decontam/inst/doc/decontam_intro.html) package, because we do not have enough blanks for the prevalence approach. Also,  only the cardhynal dataset is used as we do not have qPCR data for the Saganaki dataset. Nevertheless, OTUs considered as contaminants were removed from both entire dataset.
+Here we use only the frequency approach of the [decontam](https://www.bioconductor.org/packages/devel/bioc/vignettes/decontam/inst/doc/decontam_intro.html) package, because we do not have enough blanks for the prevalence approach. Also,  only the cardhynal dataset is used as we do not have qPCR data for the Saganaki dataset. Nevertheless, OTUs considered as contaminants were removed from both entire dataset. We usedd the sum of archaeal and bacterial 16S qPCR measurement as our quantitative information for each sample.
 ``` {r decontam1}
 Milos_Cardhynal <- subset_samples(Milos_BA, Dataset=="Cardhynal") #Subset the dataset to only the Cardhynal dataset.
 contamdf.freq <- isContaminant(Milos_Cardhynal, method="frequency", conc = "qPCR_proka") # Runs the frequency approach from decontam.
@@ -288,6 +288,8 @@ So after this pipeline we have changed a bit the original decontamination plan.
 * We removed OTUs that are not represented by a minimum of 10 reads.
 
 The important message here is that it is always important to double-check how any function/algorithm influences the samples. The consequences can be very important for some samples. That being said, we also ran some PCA on the non-decontaminated dataset, the "blindly-decontaminated" dataset (meaning running the original plan without bothering about the outcome) and the "smart-decontaminated" dataset (the one produced here), and the results looks very similar between all PCA plot :)
+
+The OTU table and the taxonomy table where then exported from the phyloseq object to be used in downstream analysis.
 
 
 
